--- a/CobolScan.ipynb
+++ b/CobolScan.ipynb
@@ -2,105 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* TRAIN6 EXAMPLE COBOL COPYBOOK\n",
-      "\n",
-      "  01 MASTER_REC.                                                  COL 73-80\n",
-      "\n",
-      "     05  ACCOUNT_NO                  PIC X(9).                    COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  REC_TYPE                    PIC X.                       COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  AMOUNT                      PIC S9(4)V99 COMP-3.         COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  BIN-NO                      PIC S9(8) COMP.              COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  BIN-NO-X REDEFINES BIN-NO   PIC XXXX.                    COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  DECIMAL-NO                  PIC S999.                    COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  MASTER-DATE.                                             COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  DATE-YY            PIC 9(2).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  DATE-MM            PIC 9(2).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  DATE-DD            PIC 9(2).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  MASTER-DOB REDEFINES MASTER-DATE.                        COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  YYMMDD             PIC XXXXXX.                       COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  ACT_TYPE                    PIC X.                       COL 73-80 \n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  OTHER-DATE.                                              COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  ODATE-YY           PIC 9(2).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  ODATE-MM           PIC 9(2).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  ODATE-DD           PIC 9(2).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  OTHER-DOB REDEFINES OTHER-DATE.                          COL 73-80\n",
-      "\n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "         10  OYYMMDDTT          PIC 9(8).                         COL 73-80\n",
-      "\n",
-      "         10  FILLER PIC X(01) VALUE ','.\n",
-      " \n",
-      "     05  OTHER_TYPE                  PIC X.                       COL 73-80 \n",
-      "     05  FILLER PIC X(01) VALUE ','.\n",
-      " \n"
-     ]
+     "evalue": "Error: Kernel not created with the name python37664bit705040e3a1344474a63676192df99c15, display_name Python 3.7.6 64-bit. Output is Installed kernelspec python37664bit705040e3a1344474a63676192df99c15 in C:\\Users\\allan\\AppData\\Roaming\\jupyter\\kernels\\python37664bit705040e3a1344474a63676192df99c15\r\n",
+     "output_type": "error"
     }
    ],
    "source": [
     "with open('cobol.copy','r') as file:\n",
-    "    line = file.readlines()\n",
+    "    file_data = file.readlines()\n",
     "    \n",
     "\n",
-    "line_x = [x[6:] for x in line]\n",
+    "file_code = [x[6:-9] for x in file_data]\n",
+    "print(file_code)\n",
     "new_line = []\n",
     "comma = ''\n",
     "\n",
