Added code to write code to file

--- a/CobolScan.ipynb
+++ b/CobolScan.ipynb
@@ -12,36 +12,35 @@
    ],
    "source": [
     "with open('cobol.copy','r') as file:\n",
-    "    file_data = file.readlines()\n",
-    "    \n",
+    "    file_data = file.readlines()    \n",
     "\n",
-    "file_code = [x[6:-9] for x in file_data]\n",
-    "print(file_code)\n",
-    "new_line = []\n",
+    "file_code = [x[6:-11] for x in file_data]\n",
+    "new_code = []\n",
     "comma = ''\n",
+    "new_line = '\\n'\n",
     "\n",
-    "for line in line_x:\n",
-    "    new_line.append(line)\n",
-    "    x = line.find('05')\n",
-    "    if x != -1:\n",
-    "        x_str = [' ']*x\n",
-    "        x_str.append('05  FILLER PIC X(01) VALUE \\',\\'.')\n",
-    "        new_line.append(comma.join(x_str))\n",
-    "        new_line.append(' ')\n",
-    "    x = line.find('10')\n",
-    "    if x != -1:\n",
-    "        x_str = [' ']*x\n",
-    "        x_str.append('10  FILLER PIC X(01) VALUE \\',\\'.')\n",
-    "        new_line.append(comma.join(x_str))\n",
-    "        new_line.append(' ')\n",
-    "        x = line.find('15')\n",
-    "    if x != -1:\n",
-    "        x_str = [' ']*x\n",
-    "        x_str.append('10  FILLER PIC X(01) VALUE \\',\\'.')\n",
-    "        new_line.append(comma.join(x_str))\n",
-    "        new_line.append(' ')\n",
+    "for line in file_code:\n",
+    "    new_code.append(line)\n",
+    "    space_index = line.find('05')\n",
+    "    if space_index != -1:\n",
+    "        str_spaces = [' ']*space_index\n",
+    "        str_spaces.append('05  FILLER PIC X(01) VALUE \\',\\'.')\n",
+    "        new_code.append(comma.join(str_spaces))\n",
+    "        new_code.append(' ')\n",
+    "    space_index = line.find('10')\n",
+    "    if space_index != -1:\n",
+    "        str_spaces = [' ']*space_index\n",
+    "        str_spaces.append('10  FILLER PIC X(01) VALUE \\',\\'.')\n",
+    "        new_code.append(comma.join(str_spaces))\n",
+    "        new_code.append(' ')\n",
+    "    space_index = line.find('15')\n",
+    "    if space_index != -1:\n",
+    "        str_spaces = [' ']*space_index\n",
+    "        str_spaces.append('15  FILLER PIC X(01) VALUE \\',\\'.')\n",
+    "        new_code.append(comma.join(str_spaces))\n",
+    "        new_code.append(' ')\n",
     "\n",
-    "for line in new_line:\n",
+    "for line in new_code:\n",
     "    print(line)"
    ]
   },
