Added Header and cleaned code using function.

--- a/CobolScan.ipynb
+++ b/CobolScan.ipynb
@@ -2,54 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [
-    {
-     "evalue": "Error: Kernel not created with the name python37664bit705040e3a1344474a63676192df99c15, display_name Python 3.7.6 64-bit. Output is Installed kernelspec python37664bit705040e3a1344474a63676192df99c15 in C:\\Users\\allan\\AppData\\Roaming\\jupyter\\kernels\\python37664bit705040e3a1344474a63676192df99c15\r\n",
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('cobol.copy','r') as file:\n",
-    "    file_data = file.readlines()    \n",
-    "\n",
-    "file_code = [x[6:-11] for x in file_data]\n",
-    "new_code = []\n",
-    "comma = ''\n",
-    "new_line = '\\n'\n",
-    "\n",
-    "for line in file_code:\n",
-    "    new_code.append(line)\n",
-    "    space_index = line.find('05')\n",
-    "    if space_index != -1:\n",
-    "        str_spaces = [' ']*space_index\n",
-    "        str_spaces.append('05  FILLER PIC X(01) VALUE \\',\\'.')\n",
-    "        new_code.append(comma.join(str_spaces))\n",
-    "        new_code.append(' ')\n",
-    "    space_index = line.find('10')\n",
-    "    if space_index != -1:\n",
-    "        str_spaces = [' ']*space_index\n",
-    "        str_spaces.append('10  FILLER PIC X(01) VALUE \\',\\'.')\n",
-    "        new_code.append(comma.join(str_spaces))\n",
-    "        new_code.append(' ')\n",
-    "    space_index = line.find('15')\n",
-    "    if space_index != -1:\n",
-    "        str_spaces = [' ']*space_index\n",
-    "        str_spaces.append('15  FILLER PIC X(01) VALUE \\',\\'.')\n",
-    "        new_code.append(comma.join(str_spaces))\n",
-    "        new_code.append(' ')\n",
-    "\n",
-    "for line in new_code:\n",
-    "    print(line)"
+    "    file_data = file.readlines()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file_code = [x[6:-11] for x in file_data]\n",
+    "new_code = []\n",
+    "csv_header_code = []\n",
+    "comma = ''\n",
+    "new_line = '\\n'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_code_file():    \n",
+    "    file_code = [x[6:-11] for x in file_data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_new_code(level_number):\n",
+    "    space_index = line.find(level_number)\n",
+    "    find_pic = line.find('PIC')\n",
+    "    if space_index != -1 and find_pic != -1:\n",
+    "        #Header File\n",
+    "        var_name = line.split(' ')[space_index+2].replace('.','')\n",
+    "        code_str = line\n",
+    "        csv_header_code[-1] = code_str[:find_pic]+'PIC X('+str(len(var_name))+') VALUE'\n",
+    "        csv_header_code.append((' '*find_pic)+'\\''+var_name+'\\'.')\n",
+    "        #CSV File\n",
+    "        str_spaces = [' ']*space_index\n",
+    "        str_spaces.append(level_number+'  FILLER PIC X(01) VALUE \\',\\'.')\n",
+    "        new_code.append(comma.join(str_spaces))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in file_code:\n",
+    "    csv_header_code.append(line)\n",
+    "    new_code.append(line)\n",
+    "    get_new_code('05')\n",
+    "    get_new_code('10')\n",
+    "    get_new_code('15')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code_str = new_line.join(new_code)\n",
+    "with open('cobol-csv.copy','w') as file:\n",
+    "    file.writelines(code_str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_str  = new_line.join(csv_header_code)\n",
+    "with open('cobol-csv-header.copy','w') as file:\n",
+    "    file.writelines(csv_str)"
+   ]
   }
  ],
  "metadata": {
